Basic options to config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+# basic options
+title: Pavel Solís
+author: Pavel Solís
+email: msolism1@jhu.edu
+twitter_username: PavelSolis
+github_username:  pavelsolis
+
+# Build settings
+markdown: kramdown
 theme: jekyll-theme-minimal
