change to minima theme

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ github_username:  pavelsolis
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+theme: minima
