space in author

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Basic options
 title: Pavel Solís
+author:  
 email: msolism1@jhu.edu
 linkedin_username: pavelsolis
 twitter_username: PavelSolis
