--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic options
 title: Pavel Solís
-author: You can contact me at:
+author: You can contact me at
 email: msolism1@jhu.edu
 linkedin_username: pavelsolis
 twitter_username: PavelSolis
