--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ twitter_username: PavelSolis
 # Pages
 header_pages:
 - index.md
-- 01-cv.md
-- 02-research.md
-- 03-teaching.md
-- 04-resources.md
+- CV.md
+- research.md
+- teaching.md
+- resources.md
 
 # Build settings
 markdown: kramdown
