--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic options
-title: Pavel **Solís**
+title: Pavel Solís
 email: msolism1@jhu.edu
 linkedin_username: pavelsolis
 twitter_username: PavelSolis
