--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ email: msolism1@jhu.edu
 linkedin_username: pavelsolis
 twitter_username: PavelSolis
 
+show_excerpts: false # set to true to show excerpts on the homepage
+
 # Pages
 header_pages:
 - index.md
