--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Pavel Solís
 author:  
 name:  
-email: msolism1@jhu.edu
+email:  
 linkedin_username: pavelsolis
 twitter_username: PavelSolis
 
