--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,17 @@ title: Pavel Solís
 author:  
 name: .
 email:  
-linkedin_username: pavelsolis
-twitter_username: PavelSolis
+#linkedin_username: pavelsolis
+#twitter_username: PavelSolis
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
-# Pages
+# Generate social links in footer
+social_links:
+  linkedin: pavelsolis
+  twitter: PavelSolis
+
+# Pages (can include index.md)
 header_pages:
 - CV.md
 - research.md
