--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Basic options
 title: Pavel Solís
-author:  
-name: .
+author: ""
+name: ""
 email:  
 #linkedin_username: pavelsolis
 #twitter_username: PavelSolis
-
-show_excerpts: true # set to true to show excerpts on the homepage
 
 # Generate social links in footer
 social_links:
