--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: Pavel Solís
 author: ""
 name: ""
-email:  
+email: msolism1@jhu.edu
 #linkedin_username: pavelsolis
 #twitter_username: PavelSolis
 
 # Generate social links in footer
-social_links:
-- linkedin: pavelsolis
-- twitter: PavelSolis
+  social_links:
+    linkedin: pavelsolis
+    twitter: PavelSolis
 
 # Pages (can include index.md)
 header_pages:
