--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Basic options
 title: Pavel Solís
-name: ""
+#author: ""
+#name: ""
 email: msolism1@jhu.edu
 #linkedin_username: pavelsolis
 #twitter_username: PavelSolis
