--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic options
-title: Pavel Solis
-#author: ""
-#name: ""
-email: msolism1@jhu.edu
+title: Pavel Solís
+author:
+  name:  
+  email: msolism1@jhu.edu
 #linkedin_username: pavelsolis
 #twitter_username: PavelSolis
 
