Social links, publication year

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,16 @@ title: Pavel Solís
 author:
   name:  
   email: msolism1@jhu.edu
+pub_year: 2020
 #linkedin_username: pavelsolis
 #twitter_username: PavelSolis
+#github_username: pavelsolis
 
 # Generate social links in footer
   social_links:
+    linkedin: pavelsolis
     twitter: PavelSolis
+    github: pavelsolis
 
 # Pages (can include index.md)
 header_pages:
