--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 title: Pavel Solís
 email: msolism1@jhu.edu
 pub_year: 2020
-linkedin_username: pavelsolis
-twitter_username: PavelSolis
-github_username: pavelsolis
+#linkedin_username: pavelsolis
+#twitter_username: PavelSolis
+#github_username: pavelsolis
 
 # Generate social links in footer
-#  social_links:
-#    linkedin: pavelsolis
-#    twitter: PavelSolis
-#    github: pavelsolis
+  social_links:
+    linkedin: pavelsolis
+    twitter: PavelSolis
+    github: pavelsolis
 
 # Pages (can include index.md)
 header_pages:
