Change show_excerpts to true

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
 #twitter_username: PavelSolis
 #github_username: pavelsolis
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Generate social links in footer
 minima:
