--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Pavel Solís
 author: ""
 email: msolism1@jhu.edu
+keywords: "pavel, solis, economics, economist, jhu, emerging markets, mexico, macroeconomics, international finance"
 
 # Generate social links in footer
 minima:
