--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic options
 title: Pavel Solís
 author: ""
-email: msolism1@jhu.edu
-keywords: "pavel, solis, economics, economist, jhu, emerging markets, mexico, macroeconomics, international finance"
+email: pavel.solis@banxico.org.mx
+keywords: "pavel, solis, solís, economics, economist, jhu, banxico, emerging markets, mexico, macroeconomics, international finance"
 
 # Generate social links in footer
 minima:
